corrected spacing for intro text

--- a/entry-05/style-05.css
+++ b/entry-05/style-05.css
@@ -38,6 +38,8 @@
 
 body { background-color: var(--off-white); }
 
+aside { padding: var(--spacing); }
+
 section { padding: var(--spacing);} 
 
 section:nth-child(3) { background-color: var(--purple); }
